--- a/templates/index.html
+++ b/templates/index.html
@@ -370,9 +370,9 @@
               data-textAlign="['inherit','inherit','inherit','inherit']" data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,0,0]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]"
               style="z-index: 11; min-width: 55px; max-width: 55px; white-space: nowrap; font-size: 20px; line-height: 22px; font-weight: 400; color: #ffffff; letter-spacing: 0px;font-family:Open Sans;">
               <ul class="social-icon icon-border-rounded icon-size-medium social-vertical text-center">
-                <li class="facebook"><a href=https://www.instagram.com/_nexus.events_/ class="link" aria-label="Facebook"><i class="fab fa-facebook"></i></a></li>
+                <li class="facebook"><a href="https://www.instagram.com/_nexus.events_/" class="link" aria-label="Facebook"><i class="fab fa-facebook"></i></a></li>
                 <li class="twitter"><a href="#" class="link" aria-label="Twitter"><i class="fab fa-twitter"></i></a></li>
-                <li class="instagram"><a href="#" class="link" aria-label="Instagram"><i class="fab fa-instagram"></i></a></li>
+                <li class="instagram"><a href="https://www.instagram.com/_nexus.events_/" class="link" aria-label="Instagram"><i class="fab fa-instagram"></i></a></li>
               </ul>
             </div>
           </li>
