--- a/templates/index.html
+++ b/templates/index.html
@@ -370,8 +370,8 @@
               data-textAlign="['inherit','inherit','inherit','inherit']" data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,0,0]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]"
               style="z-index: 11; min-width: 55px; max-width: 55px; white-space: nowrap; font-size: 20px; line-height: 22px; font-weight: 400; color: #ffffff; letter-spacing: 0px;font-family:Open Sans;">
               <ul class="social-icon icon-border-rounded icon-size-medium social-vertical text-center">
-                <li class="facebook"><a href="https://www.instagram.com/_nexus.events_/" class="link" aria-label="Facebook"><i class="fab fa-facebook"></i></a></li>
-                <li class="twitter"><a href="#" class="link" aria-label="Twitter"><i class="fab fa-twitter"></i></a></li>
+                <li class="facebook"><a href="https://www.facebook.com/Nexus-104982327877807/" class="link" aria-label="Facebook"><i class="fab fa-facebook"></i></a></li>
+                <li class="twitter"><a href="#" class="https://twitter.com/_nexusevents_" aria-label="Twitter"><i class="fab fa-twitter"></i></a></li>
                 <li class="instagram"><a href="https://www.instagram.com/_nexus.events_/" class="link" aria-label="Instagram"><i class="fab fa-instagram"></i></a></li>
               </ul>
             </div>
@@ -764,7 +764,7 @@
           </div>
         </div>
       </div> <!-- End Testimonial Area -->
-      <!-- Start Blog Area -->
+      <!-- Start Blog Area
       <div class="bk-blog-area section-ptb-120 clearfix">
         <div class="container">
           <div class="row">
@@ -780,7 +780,8 @@
           <div class="row mt--40">
             <div class="col-lg-6 col-xl-3 col-md-6 col-sm-6 col-12 wow move-up mt--30">
               <div class="blog blog-style--2 creative--blog">
-                <!-- Swip Slide -->
+              -->
+                <!-- Swip Slide 
                 <div class="thumb blog-slick-initial poss_relative"> <a href="{{url_for('static',filename='blog-details.html')}}"><img src="{{url_for('static',filename='img/blog/blog-2/blog-1.jpg')}}" alt="Blog Images"></a> <a
                     href="{{url_for('static',filename='blog-details.html')}}"><img src="{{url_for('static',filename='img/blog/blog-2/blog-3.jpg')}}" alt="Blog Images"></a> <a href="{{url_for('static',filename='blog-details.html')}}"><img
                       src="{{url_for('static',filename='img/blog/blog-2/blog-4.jpg')}}" alt="Blog Images"></a> </div>
@@ -796,7 +797,6 @@
               </div>
             </div> <!-- End Single Portfolio -->
             <!-- COPY PASTE REST OF BLOG -->
-
             -~>
           </div>
         </div>
