--- a/templates/index.html
+++ b/templates/index.html
@@ -343,16 +343,16 @@
               data-textAlign="['center','center','center','center']" data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,0,0]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]"
               style="z-index: 6; white-space: nowrap; font-size: 120px; line-height: 146px; font-family: Roboto; font-weight: 200; color: #ffffff; letter-spacing: 0px">Nexus <span class="secondary-font" style="font-style: italic;">Reality</span> </div>
             <!-- LAYER NR. 3 -->
-            <div class="tp-caption " id="slide-7-layer-5" data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']" data-y="['middle','middle','middle','middle']" data-voffset="['54','54','70','50']" data-width="none"
+            <div class="tp-caption " id="slide-7-layer-5" data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']" data-y="['middle','middle','middle','middle']" data-voffset="['54','54','60','50']" data-width="none"
               data-height="none" data-whitespace="nowrap" data-type="image" data-responsive_offset="off" data-responsive="off"
-              data-frames='[{"delay":700,"speed":1500,"frame":"0","from":"y:50px;opacity:0;","to":"o:1;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;","ease":"Power3.easeInOut"}]'
+              data-frames='[{"delay":600,"speed":1500,"frame":"0","from":"y:50px;opacity:0;","to":"o:1;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;","ease":"Power3.easeInOut"}]'
               data-textAlign="['inherit','inherit','inherit','inherit']" data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,0,0]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]" style="z-index: 7;"><img
                 src="{{url_for('static',filename='img/revoulation/slide.png')}}" alt="" data-ww="['118px','118px','118px','118px']" data-hh="['7px','7px','7px','7px']" data-no-retina> </div> <!-- LAYER NR. 4 -->
             <div class="tp-caption creative-agency-pra" id="slide-7-layer-6" data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']" data-y="['middle','middle','middle','middle']" data-voffset="['135','135','140','120']"
-              data-fontsize="['18','18','18','16']" data-lineheight="['30','30','30','27']" data-width="['570','570','400','360']" data-height="none" data-whitespace="normal" data-type="text" data-responsive_offset="off" data-responsive="off"
+              data-fontsize="['18','18','18','16']" data-lineheight="['30','30','30','27']" data-width="['560','560','400','360']" data-height="none" data-whitespace="normal" data-type="text" data-responsive_offset="off" data-responsive="off"
               data-frames='[{"delay":900,"speed":1500,"frame":"0","from":"y:50px;opacity:0;","to":"o:1;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;","ease":"Power3.easeInOut"}]'
               data-textAlign="['center','center','center','center']" data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,0,0]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]"
-              style="z-index: 8; min-width: 570px; max-width: 570px; white-space: normal; font-size: 18px; font-family: Roboto; line-height: 30px; font-weight: 100; color: #ffffff; letter-spacing: 0px;">Gatherings, reinvented. — Your portal to a nexus of virtual events.</i></div> <!-- LAYER NR. 5 --> <a class="tp-caption smooth-scroll-link" href="#section-about" target="_self" id="slide-7-layer-7" data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']"
+              style="z-index: 8; min-width: 560px; max-width: 560px; white-space: normal; font-size: 18px; font-family: Roboto; line-height: 30px; font-weight: 100; color: #ffffff; letter-spacing: 0px;">Gatherings, reinvented. — Your portal to a nexus of virtual events.</i></div> <!-- LAYER NR. 5 --> <a class="tp-caption smooth-scroll-link" href="#section-about" target="_self" id="slide-7-layer-7" data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']"
               data-y="['bottom','bottom','bottom','bottom']" data-voffset="['110','110','50','50']" data-width="none" data-height="none" data-whitespace="nowrap" data-type="image" data-actions='' data-basealign="slide" data-responsive_offset="off"
               data-responsive="off" data-frames='[{"delay":1000,"speed":1000,"frame":"0","from":"y:50px;opacity:0;","to":"o:1;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;","ease":"Power3.easeInOut"}]'
               data-textAlign="['inherit','inherit','inherit','inherit']" data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,0,0]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]" style="z-index: 9;text-decoration: none;">
@@ -432,7 +432,7 @@
             <!-- Start Single Service -->
             <div class="col-lg-4 col-md-4 col-sm-6 col-12 wow move-up">
               <div class="service service--2">
-                <div class="thumb"> <center> <img src="{{url_for('static',filename='img/service/icon1new copy.png')}}" alt="images" width="115" height="115"> </center> </div>
+                <div class="thumb"> <center> <img src="{{url_for('static',filename='img/service/multiplayer.svg')}}" alt="images" width="115" height="115"> </center> </div>
                 <div class="content" style="text-align: center">
                   <h4>Multiplayer Capabilities</h4>
                   <p>Our platform is equpied with a spacial sound system to allow live, real voice communication and interaction with other players.</p>
@@ -442,7 +442,7 @@
             <!-- Start Single Service -->
             <div class="col-lg-4 col-md-4 col-sm-6 col-12 wow move-up mt_mobile--40">
               <div class="service service--2">
-                <div class="thumb"> <center> <img src="{{url_for('static',filename='img/service/icon3 new copy.png')}}" alt="images" width="115" height="115"> </center> </div>
+                <div class="thumb"> <center> <img src="{{url_for('static',filename='img/service/comm.svg')}}" alt="images" width="115" height="115"> </center> </div>
                 <div class="content" style="text-align: center">
                   <h4>Realtime Voice & Video</h4>
                   <p>Nexus provides customizable avatars with a large selection of items to choose froms.</p>
@@ -452,7 +452,7 @@
             <!-- Start Single Service -->
             <div class="col-lg-4 col-md-4 col-sm-6 col-12 wow move-up mt_sm--40">
               <div class="service service--2">
-                <div class="thumb"> <center> <img src="{{url_for('static',filename='img/service/icon2new.png')}}" alt="images" width="115" height="115"> </center> </div>
+                <div class="thumb"> <center> <img src="{{url_for('static',filename='img/service/interactions.svg')}}" alt="images" width="115" height="115"> </center> </div>
                 <div class="content" style="text-align: center">
                   <h4>Synced Player Interactions</h4>
                   <p>Nexus uses 3D Terrain Models imported from Google Maps.</p>
@@ -460,13 +460,13 @@
               </div>
             </div> <!-- End Single Service -->
           </div>
-          <div class="row" style="padding-top: 70px;">
+          <div class="row" style="padding-top: 60px;">
             <!-- Start Single Service -->
             <div class="col-lg-4 col-md-4 col-sm-6 col-12 wow move-up">
               <div class="service service--2">
                 <div class="thumb"> <center> <img src="{{url_for('static',filename='img/service/icon1new copy.png')}}" alt="images" width="115" height="115"> </center> </div>
                 <div class="content" style="text-align: center">
-                  <h4>Administrator-Regulated</h4>
+                  <h4>Administrator Regulated</h4>
                   <p>Our platform is equpied with a spacial sound system to allow live, real voice communication and interaction with other players.</p>
                 </div>
               </div>
@@ -492,11 +492,11 @@
               </div>
             </div> <!-- End Single Service -->
           </div>
-          <div class="row" style="padding-top: 70px;">
+          <div class="row" style="padding-top: 60px;">
             <!-- Start Single Service -->
             <div class="col-lg-4 col-md-4 col-sm-6 col-12 wow move-up">
               <div class="service service--2">
-                <div class="thumb"> <center> <img src="{{url_for('static',filename='img/service/icon1new copy.png')}}" alt="images" width="115" height="115"> </center> </div>
+                <div class="thumb"> <center> <img src="{{url_for('static',filename='img/service/lifelike.svg')}}" alt="images" width="115" height="115"> </center> </div>
                 <div class="content" style="text-align: center">
                   <h4>Lifelike Graphics</h4>
                   <p>Our platform is equpied with a spacial sound system to allow live, real voice communication and interaction with other players.</p>
@@ -506,7 +506,7 @@
             <!-- Start Single Service -->
             <div class="col-lg-4 col-md-4 col-sm-6 col-12 wow move-up mt_mobile--40">
               <div class="service service--2">
-                <div class="thumb"> <center> <img src="{{url_for('static',filename='img/service/icon3 new copy.png')}}" alt="images" width="115" height="115"> </center> </div>
+                <div class="thumb"> <center> <img src="{{url_for('static',filename='img/service/immersive.svg')}}" alt="images" width="115" height="115"> </center> </div>
                 <div class="content" style="text-align: center">
                   <h4>Immersive Experience</h4>
                   <p>Nexus provides customizable avatars with a large selection of items to choose froms.</p>
@@ -516,7 +516,7 @@
             <!-- Start Single Service -->
             <div class="col-lg-4 col-md-4 col-sm-6 col-12 wow move-up mt_sm--40">
               <div class="service service--2">
-                <div class="thumb"> <center> <img src="{{url_for('static',filename='img/service/icon2new.png')}}" alt="images" width="115" height="115"> </center> </div>
+                <div class="thumb"> <center> <img src="{{url_for('static',filename='img/service/anims.svg')}}" alt="images" width="115" height="115"> </center> </div>
                 <div class="content" style="text-align: center">
                   <h4>Diverse Player Animations</h4>
                   <p>Nexus uses 3D Terrain Models imported from Google Maps.</p>
@@ -674,7 +674,7 @@
                   <div class="testimonial testimonial--creative">
                     <div class="brook-element-carousel nav-thumb testimonial-fixed-width testimonial-nav-style"
                       data-slick-options='{ "spaceBetween": 15, "slidesToShow": 3, "slidesToScroll": 1, "arrows": false, "infinite": true, "centerMode":true, "dot": false, "focusOnSelect": true, "asNavFor": ".nav-content" }'
-                      data-slick-responsive='[ {"breakpoint":770, "settings": {"slidesToShow": 3}}, {"breakpoint":577, "settings": {"slidesToShow": 3}}, {"breakpoint":575, "settings": {"slidesToShow": 1}} ]'>
+                      data-slick-responsive='[ {"breakpoint":760, "settings": {"slidesToShow": 3}}, {"breakpoint":577, "settings": {"slidesToShow": 3}}, {"breakpoint":575, "settings": {"slidesToShow": 1}} ]'>
                       <!-- Start Single Thumb -->
                       <div class="clint-thumb"> <img src="{{url_for('static',filename='img/testimonial/clint-3/avata-01.png')}}" alt="testimonial images"> </div> <!-- Start Single Thumb -->
                       <div class="clint-thumb"> <img src="{{url_for('static',filename='img/testimonial/clint-3/avata-02.png')}}" alt="testimonial images"> </div> <!-- Start Single Thumb -->
