--- a/templates/index.html
+++ b/templates/index.html
@@ -464,7 +464,7 @@
             <!-- Start Single Service -->
             <div class="col-lg-4 col-md-4 col-sm-6 col-12 wow move-up">
               <div class="service service--2">
-                <div class="thumb"> <center> <img src="{{url_for('static',filename='img/service/icon1new copy.png')}}" alt="images" width="115" height="115"> </center> </div>
+                <div class="thumb"> <center> <img src="{{url_for('static',filename='img/service/admin.svg')}}" alt="images" width="115" height="115"> </center> </div>
                 <div class="content" style="text-align: center">
                   <h4>Administrator Regulated</h4>
                   <p>Our platform is equpied with a spacial sound system to allow live, real voice communication and interaction with other players.</p>
@@ -474,7 +474,7 @@
             <!-- Start Single Service -->
             <div class="col-lg-4 col-md-4 col-sm-6 col-12 wow move-up mt_mobile--40">
               <div class="service service--2">
-                <div class="thumb"> <center> <img src="{{url_for('static',filename='img/service/icon3 new copy.png')}}" alt="images" width="115" height="115"> </center> </div>
+                <div class="thumb"> <center> <img src="{{url_for('static',filename='img/service/scalable.svg')}}" alt="images" width="115" height="115"> </center> </div>
                 <div class="content" style="text-align: center">
                   <h4>Scalable Platform</h4>
                   <p>Nexus provides customizable avatars with a large selection of items to choose froms.</p>
@@ -484,7 +484,7 @@
             <!-- Start Single Service -->
             <div class="col-lg-4 col-md-4 col-sm-6 col-12 wow move-up mt_sm--40">
               <div class="service service--2">
-                <div class="thumb"> <center> <img src="{{url_for('static',filename='img/service/icon2new.png')}}" alt="images" width="115" height="115"> </center> </div>
+                <div class="thumb"> <center> <img src="{{url_for('static',filename='img/service/avatars.svg')}}" alt="images" width="115" height="115"> </center> </div>
                 <div class="content" style="text-align: center">
                   <h4>Customizable Avatars</h4>
                   <p>Nexus uses 3D Terrain Models imported from Google Maps.</p>
@@ -781,7 +781,7 @@
             <div class="col-lg-6 col-xl-3 col-md-6 col-sm-6 col-12 wow move-up mt--30">
               <div class="blog blog-style--2 creative--blog">
               -->
-                <!-- Swip Slide 
+                <!-- Swip Slide
                 <div class="thumb blog-slick-initial poss_relative"> <a href="{{url_for('static',filename='blog-details.html')}}"><img src="{{url_for('static',filename='img/blog/blog-2/blog-1.jpg')}}" alt="Blog Images"></a> <a
                     href="{{url_for('static',filename='blog-details.html')}}"><img src="{{url_for('static',filename='img/blog/blog-2/blog-3.jpg')}}" alt="Blog Images"></a> <a href="{{url_for('static',filename='blog-details.html')}}"><img
                       src="{{url_for('static',filename='img/blog/blog-2/blog-4.jpg')}}" alt="Blog Images"></a> </div>
