--- a/templates/index.html
+++ b/templates/index.html
@@ -548,7 +548,7 @@
                   <div class="swiper-wrapper">
                     <!-- Start Single Portfolio -->
                     <div class="portfolio portfolio_style--2 mt--30 swiper-slide">
-                      <div class="thumb"> <img src="{{url_for('static',filename='img/portfolio/portfolio-2/slide1.jpg')}}" alt="Portfolio Images"> </div>
+                      <div class="thumb"> <img src="{{url_for('static',filename='img/portfolio/portfolio-2/slide.jpg')}}" alt="Portfolio Images"> </div>
                       <div class="portfolio-overlay"></div>
                       <div class="port-overlay-info">
                         <div class="content">
@@ -559,7 +559,7 @@
                     </div> <!-- End Single Portfolio -->
                     <!-- Start Single Portfolio -->
                     <div class="portfolio portfolio_style--2 mt--30 swiper-slide">
-                      <div class="thumb"> <img src="{{url_for('static',filename='img/portfolio/portfolio-2/portfolio-02.jpg')}}" alt="Portfolio Images"> </div>
+                      <div class="thumb"> <img src="{{url_for('static',filename='img/portfolio/portfolio-2/slide2.jpg')}}" alt="Portfolio Images"> </div>
                       <div class="portfolio-overlay"></div>
                       <div class="port-overlay-info">
                         <div class="content">
@@ -570,7 +570,7 @@
                     </div> <!-- End Single Portfolio -->
                     <!-- Start Single Portfolio -->
                     <div class="portfolio portfolio_style--2 mt--30 swiper-slide">
-                      <div class="thumb"> <img src="{{url_for('static',filename='img/portfolio/portfolio-2/portfolio-03.jpg')}}" alt="Portfolio Images"> </div>
+                      <div class="thumb"> <img src="{{url_for('static',filename='img/portfolio/portfolio-2/slide3.jpg')}}" alt="Portfolio Images"> </div>
                       <div class="portfolio-overlay"></div>
                       <div class="port-overlay-info">
                         <div class="content">
@@ -581,7 +581,7 @@
                     </div> <!-- End Single Portfolio -->
                     <!-- Start Single Portfolio -->
                     <div class="portfolio portfolio_style--2 mt--30 swiper-slide">
-                      <div class="thumb"> <img src="{{url_for('static',filename='img/portfolio/portfolio-2/portfolio-04.jpg')}}" alt="Portfolio Images"> </div>
+                      <div class="thumb"> <img src="{{url_for('static',filename='img/portfolio/portfolio-2/slide4.jpg')}}" alt="Portfolio Images"> </div>
                       <div class="portfolio-overlay"></div>
                       <div class="port-overlay-info">
                         <div class="content">
@@ -592,7 +592,7 @@
                     </div> <!-- End Single Portfolio -->
                     <!-- Start Single Portfolio -->
                     <div class="portfolio portfolio_style--2 mt--30 swiper-slide">
-                      <div class="thumb"> <img src="{{url_for('static',filename='img/portfolio/portfolio-2/portfolio-05.jpg')}}" alt="Portfolio Images"> </div>
+                      <div class="thumb"> <img src="{{url_for('static',filename='img/portfolio/portfolio-2/slide5.jpg')}}" alt="Portfolio Images"> </div>
                       <div class="portfolio-overlay"></div>
                       <div class="port-overlay-info">
                         <div class="content">
@@ -603,7 +603,51 @@
                     </div> <!-- End Single Portfolio -->
                     <!-- Start Single Portfolio -->
                     <div class="portfolio portfolio_style--2 mt--30 swiper-slide">
-                      <div class="thumb"> <img src="{{url_for('static',filename='img/portfolio/portfolio-2/portfolio-06.jpg')}}" alt="Portfolio Images"> </div>
+                      <div class="thumb"> <img src="{{url_for('static',filename='img/portfolio/portfolio-2/slide6.jpg')}}" alt="Portfolio Images"> </div>
+                      <div class="portfolio-overlay"></div>
+                      <div class="port-overlay-info">
+                        <div class="content">
+                          <h3 class="port-title" style="font-family: Roboto; font-weight: 200;">The Virtual Villeage</h3>
+                          <div class="category" style="font-family: Roboto; font-weight: 200;">The Lawrenceville School</div>
+                        </div>
+                      </div>
+                    </div> <!-- End Single Portfolio -->
+                    <!-- Start Single Portfolio -->
+                    <div class="portfolio portfolio_style--2 mt--30 swiper-slide">
+                      <div class="thumb"> <img src="{{url_for('static',filename='img/portfolio/portfolio-2/slide7.jpg')}}" alt="Portfolio Images"> </div>
+                      <div class="portfolio-overlay"></div>
+                      <div class="port-overlay-info">
+                        <div class="content">
+                          <h3 class="port-title" style="font-family: Roboto; font-weight: 200;">The Virtual Villeage</h3>
+                          <div class="category" style="font-family: Roboto; font-weight: 200;">The Lawrenceville School</div>
+                        </div>
+                      </div>
+                    </div> <!-- End Single Portfolio -->
+                    <!-- Start Single Portfolio -->
+                    <div class="portfolio portfolio_style--2 mt--30 swiper-slide">
+                      <div class="thumb"> <img src="{{url_for('static',filename='img/portfolio/portfolio-2/slide8.jpg')}}" alt="Portfolio Images"> </div>
+                      <div class="portfolio-overlay"></div>
+                      <div class="port-overlay-info">
+                        <div class="content">
+                          <h3 class="port-title" style="font-family: Roboto; font-weight: 200;">The Virtual Villeage</h3>
+                          <div class="category" style="font-family: Roboto; font-weight: 200;">The Lawrenceville School</div>
+                        </div>
+                      </div>
+                    </div> <!-- End Single Portfolio -->
+                    <!-- Start Single Portfolio -->
+                    <div class="portfolio portfolio_style--2 mt--30 swiper-slide">
+                      <div class="thumb"> <img src="{{url_for('static',filename='img/portfolio/portfolio-2/slide9.jpg')}}" alt="Portfolio Images"> </div>
+                      <div class="portfolio-overlay"></div>
+                      <div class="port-overlay-info">
+                        <div class="content">
+                          <h3 class="port-title" style="font-family: Roboto; font-weight: 200;">The Virtual Villeage</h3>
+                          <div class="category" style="font-family: Roboto; font-weight: 200;">The Lawrenceville School</div>
+                        </div>
+                      </div>
+                    </div> <!-- End Single Portfolio -->
+                    <!-- Start Single Portfolio -->
+                    <div class="portfolio portfolio_style--2 mt--30 swiper-slide">
+                      <div class="thumb"> <img src="{{url_for('static',filename='img/portfolio/portfolio-2/slide10.jpg')}}" alt="Portfolio Images"> </div>
                       <div class="portfolio-overlay"></div>
                       <div class="port-overlay-info">
                         <div class="content">
