--- a/templates/index.html
+++ b/templates/index.html
@@ -435,7 +435,7 @@
                 <div class="thumb"> <center> <img src="{{url_for('static',filename='img/service/multiplayer.svg')}}" alt="images" width="115" height="115"> </center> </div>
                 <div class="content" style="text-align: center">
                   <h4>Multiplayer Capabilities</h4>
-                  <p>Our platform is equpied with a spacial sound system to allow live, real voice communication and interaction with other players.</p>
+                  <p>Nexus allows multiple players to play within a server at once to establish an interactive platform.</p>
                 </div>
               </div>
             </div> <!-- End Single Service -->
@@ -445,7 +445,7 @@
                 <div class="thumb"> <center> <img src="{{url_for('static',filename='img/service/comm.svg')}}" alt="images" width="115" height="115"> </center> </div>
                 <div class="content" style="text-align: center">
                   <h4>Realtime Voice & Video</h4>
-                  <p>Nexus provides customizable avatars with a large selection of items to choose froms.</p>
+                  <p>Our platform is equipped with a spacial sound system to allow live, real voice communication and interaction with other players.</p>
                 </div>
               </div>
             </div> <!-- End Single Service -->
@@ -455,7 +455,7 @@
                 <div class="thumb"> <center> <img src="{{url_for('static',filename='img/service/interactions.svg')}}" alt="images" width="115" height="115"> </center> </div>
                 <div class="content" style="text-align: center">
                   <h4>Synced Player Interactions</h4>
-                  <p>Nexus uses 3D Terrain Models imported from Google Maps.</p>
+                  <p>Our platform allows users to graphically interact with each other through hand-shakes, handing diplomas, etc.</p>
                 </div>
               </div>
             </div> <!-- End Single Service -->
@@ -467,7 +467,7 @@
                 <div class="thumb"> <center> <img src="{{url_for('static',filename='img/service/admin.svg')}}" alt="images" width="115" height="115"> </center> </div>
                 <div class="content" style="text-align: center">
                   <h4>Administrator Regulated</h4>
-                  <p>Our platform is equpied with a spacial sound system to allow live, real voice communication and interaction with other players.</p>
+                  <p>Our platform is regulated by organizers and administrators who can regulate the game experience by altering perspectives, screen content, and room occupation.</p>
                 </div>
               </div>
             </div> <!-- End Single Service -->
@@ -477,7 +477,7 @@
                 <div class="thumb"> <center> <img src="{{url_for('static',filename='img/service/scalable.svg')}}" alt="images" width="115" height="115"> </center> </div>
                 <div class="content" style="text-align: center">
                   <h4>Scalable Platform</h4>
-                  <p>Nexus provides customizable avatars with a large selection of items to choose froms.</p>
+                  <p>Nexus ensures a fast, scalable platform through the room system. This allows for large quantities of people to be in-game at the same time without having to render all of them.</p>
                 </div>
               </div>
             </div> <!-- End Single Service -->
@@ -487,7 +487,7 @@
                 <div class="thumb"> <center> <img src="{{url_for('static',filename='img/service/avatars.svg')}}" alt="images" width="115" height="115"> </center> </div>
                 <div class="content" style="text-align: center">
                   <h4>Customizable Avatars</h4>
-                  <p>Nexus uses 3D Terrain Models imported from Google Maps.</p>
+                  <p>Nexus provides customizable avatars with a large selection of customize options to choose from.</p>
                 </div>
               </div>
             </div> <!-- End Single Service -->
@@ -499,7 +499,7 @@
                 <div class="thumb"> <center> <img src="{{url_for('static',filename='img/service/lifelike.svg')}}" alt="images" width="115" height="115"> </center> </div>
                 <div class="content" style="text-align: center">
                   <h4>Lifelike Graphics</h4>
-                  <p>Our platform is equpied with a spacial sound system to allow live, real voice communication and interaction with other players.</p>
+                  <p> Our platform is enhanced to look as realistic as possible with new advanced rendering methods developed through the Unity 		programming platform and realistic building terrain models imported from Google Maps. </p>
                 </div>
               </div>
             </div> <!-- End Single Service -->
@@ -509,7 +509,7 @@
                 <div class="thumb"> <center> <img src="{{url_for('static',filename='img/service/immersive.svg')}}" alt="images" width="115" height="115"> </center> </div>
                 <div class="content" style="text-align: center">
                   <h4>Immersive Experience</h4>
-                  <p>Nexus provides customizable avatars with a large selection of items to choose froms.</p>
+                  <p>Nexus places a user in-scene in an exact location in the world replicated through life-like graphics.</p>
                 </div>
               </div>
             </div> <!-- End Single Service -->
@@ -519,7 +519,7 @@
                 <div class="thumb"> <center> <img src="{{url_for('static',filename='img/service/anims.svg')}}" alt="images" width="115" height="115"> </center> </div>
                 <div class="content" style="text-align: center">
                   <h4>Diverse Player Animations</h4>
-                  <p>Nexus uses 3D Terrain Models imported from Google Maps.</p>
+                  <p>Our platform enables avatars to interact with their surroundings. For example, sitting, clapping, dancing, waving, etc.</p>
                 </div>
               </div>
             </div> <!-- End Single Service -->
@@ -533,7 +533,7 @@
             <div class="col-lg-12">
               <div class="section-title--between wow move-up">
                 <div class="title">
-                  <h3> Featured <span class="theme-creative">Projects</span></h3>
+                  <h3> Pitch <span class="theme-creative">Deck</span></h3>
                 </div>
               <!-->  <div class="section-btn mt_mobile--30"> <a class="button-text" href="#"><span>View all projects</span><i class="fa fa-arrow-right"></i></a> </div> <-->
               </div>
@@ -683,7 +683,7 @@
               <div class="speakers-number-wrap counter-grid">
                 <!-- Start Single Count -->
                 <div class="counter-style--2 wow move-up">
-                  <div class="icon"> <i class="ion-ios-eye-outline"></i> </div> <span class="count">1</span>
+                  <div class="icon"> <i class="ion-ios-eye-outline"></i> </div> <span class="count">2</span>
                   <div class="content">
                     <h6>Unique designs</h6>
                   </div>
